--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
 	"dependencies": { "@dagger.io/dagger": "^0.9.11" },
 	"devDependencies": { "tsx": "^4.7.1" },
 	"engines": { "node": ">=21" },
+
 	"exports": { ".": "./dist/index.js" },
 	"files": ["dist/"],
-	"main": "./out/app/index.js",
+	"main": "dist/index.js",
 	"type": "module"
 }
