--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
 	"compilerOptions": {
-		"module": "esnext",
-		"moduleResolution": "nodenext",
-		"target": "es2016",
 		"lib": ["esnext"],
+		"module": "esnext",
+		"moduleResolution": "bundler",
+		"target": "es2016",
 
-		"rootDirs": ["./src"],
+		"outDir": "./dist",
 		"paths": { "@/*": ["./src/*"] },
-		"outDir": "./out",
+		"rootDirs": ["./src"],
 
 		"allowJs": true,
 		"allowUnreachableCode": false,
@@ -28,9 +28,9 @@
 		"noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"skipLibCheck": true
 	},
-	"files": [],
 	"exclude": ["node_modules"],
 	"include": ["src/**/*"]
 }
