--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
 	"keywords": ["chainguard-dev/dagger", "ci", "ci/cd", "dagger", "dagger.io", "pipelines", "scabbard"],
 	"repository": { "type": "git", "url": "git+https://github.com/Iron-E/scabbard.git" },
 
-	"dependencies": { "@dagger.io/dagger": "^0.9.11" },
-	"devDependencies": { "ts-node": "^10.9.2", "typescript": "^5.3.3" },
+	"devDependencies": {
+		"ts-node": "^10.9.2",
+		"typescript": "^5.3.3",
+		"tsx": "^4.7.1"
+	},
+	"peerDependencies": { "@dagger.io/dagger": "^0.9.11" },
 	"engines": { "node": ">=21" },
 
-	"exports": { ".": "./dist/src/index.js" },
-	"files": ["dist/src/"],
-	"main": "dist/src/index.js",
-	"type": "module"
+	"exports": { ".": "./dist/index.js" },
+	"files": ["dist/"],
+	"main": "dist/index.js",
+	"type": "module",
+
+	"scripts": { "dagger": "dagger run tsx" }
 }
