--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
 	"extends": "./tsconfig-base.json",
+	"compilerOptions": {
+		"noEmit": true
+	},
+
 	"exclude": ["node_modules"],
 	"include": ["src/**/*.ts"],
 	"references": [{ "path": "./src" }]
