--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
 	"peerDependencies": { "@dagger.io/dagger": "^0.9.11" },
 	"engines": { "node": ">=21" },
 
-	"exports": { ".": "./dist/index.js" },
+	"exports": {
+		".": {
+			"default": "./dist/index.js",
+			"types": "./dist/index.d.ts"
+		}
+	},
 	"files": ["dist/"],
 	"main": "dist/index.js",
 	"type": "module",
