build(node): update exports

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
 	"engines": { "node": ">=21" },
 
 	"exports": {
-		".": {
-			"default": "./dist/index.js",
-			"types": "./dist/index.d.ts"
-		}
+		".": { "default": "./dist/index.js", "types": "./dist/index.d.ts" },
+		"./container": { "default": "./dist/container.js", "types": "./dist/container.d.ts" },
+		"./fs": { "default": "./dist/fs.js", "types": "./dist/fs.d.ts" },
+		"./rust": { "default": "./dist/rust/index.js", "types": "./dist/rust/index.d.ts" }
 	},
 	"files": ["dist/"],
 	"main": "dist/index.js",
