--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
 	},
 
 	"exclude": ["node_modules"],
-	"include": ["src/**/*.ts"],
+	"include": ["src/**/*.ts", "src/**/*.mts"],
 	"references": [{ "path": "./src" }]
 }
