build(ts): enable strict type checking
WHY wasn't this enabled???

--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -25,6 +25,7 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"resolveJsonModule": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"strict": true
 	}
 }
