--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"noEmit": true
 	},
 
-	"exclude": ["node_modules"],
+	"exclude": ["node_modules", "src/**/*.test.ts", "src/**/*.test.mts"],
 	"include": ["src/**/*.ts", "src/**/*.mts"],
 	"references": [{ "path": "./src" }]
 }
